# BlockchainProject

./: CMakelists.txt  Doxyfile  README.md  run.txt
include/blockchain/: Block.h  Blockchain.h  CryptoUtils.h  Exceptions.h
src/core/: Block.cpp  Blockchain.cpp  CryptoUtils.cpp
src/main/: main.cpp
src/utils/: picosha2.h
tests/: CMakeLists.txt  test_block.cpp  test_blockchain.cpp
